[develop] fix overflow on firefox

--- a/src/styles/fullpage/fullpage.scss
+++ b/src/styles/fullpage/fullpage.scss
@@ -586,7 +586,7 @@ $redesignSecondaryColor: #a0a0a0;
             padding: 0 10px;
             .fp__three_redesign_items_image {
               padding-top: 10px;
-              min-height: 50%;
+              // min-height: 50%;
               height: fit-content;
               display: flex;
               justify-content: center;
